--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,9 @@
-#spring.application.name=adamon
-#
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/adamon
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql: true
-#
+
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 # DATASOURCE
-spring.datasource.url=jdbc:h2:mem:adamon
+spring.datasource.url=jdbc:h2:file:./test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
